test/tests/operators/to_tcp/error_connect_max_retry_count.txt
error: failed to connect to 127.0.0.1:9: Connection refused
 --> tests/operators/to_tcp/error_connect_max_retry_count.tql:9:8
  |
9 | to_tcp "127.0.0.1:9", max_retry_count=1 {
  |        ^^^^^^^^^^^^^ 
  |
  = note: gave up after 1 retry
  = hint: ensure a TCP server is listening on this endpoint
  = note: `tls` is disabled for this connection
  = hint: if the server requires TLS, set `tls=true`
